# wxFormBuilder

./: .gitignore  CMakeLists.txt  README  README.md  TODO.txt  wxFormBuilder-unix.workspace
CMakeModules/: BuildPackage.cmake  Buildticpp.cmake  Findticpp.cmake  FindwxWidgets.cmake
Install/: Changelog.txt  wxFormBuilder.iss
install/: create_source_package.bat  excludes  wxFormBuilder.iss
install/linux/debian/: copyright
install/support/: plugins_page.isf
libs/: README.TXT
output/plugins/additional/xml/: additional.cppcode
packaging/ArchLinux/: PKGBUILD
plugins/: CMakeLists.txt
plugins/additional/: CMakeLists.txt  additional.cbp  additional.cpp  bookutils.h
plugins/common/: CMakeLists.txt  common-unix.cbp  common.cpp
plugins/containers/: CMakeLists.txt
plugins/forms/: CMakeLists.txt
plugins/layout/: CMakeLists.txt
sdk/: README.TXT  premake.lua
sdk/plugin_interface/: CMakeLists.txt  Plugin Interface.cbp  component.h  plugin_interface-unix.cbp  plugin_interface.cbp  premake.lua  xrcconv.cpp
src/: CMakeLists.txt  Makefile  Makefile.lnx-unicode  Makefile.tinyxml  README.txt  maingui.cpp  maingui.h  todo.txt  wxFormBuilder-linux.cbp  wxFormBuilder-unix.cbp  wxFormBuilder-unix.workspace  wxFormBuilder.cbp  wxFormBuilder.rc  wxFormBuilder.sln  wxFormBuilder.vcproj  wxFormBuilder.workspace
src/codegen/: codeParser.cpp  codegen.cpp  codegen.h  codeparser.cpp  codeparser.h  cppcg.cpp  cppcg.h  xrccg.cpp
src/md5/: md5.cc
src/model/: database.cpp  database.h  objectbase.cpp  objectbase.h  types.cpp  types.h  xrcfilter.cpp  xrcfilter.h
src/plugins/: component.h  plugin.h
src/plugins/mmwx/: Makefile  Makefile.242  mmwx.cpp  mmwx.xml
src/plugins/standard/: Makefile  Makefile.260  additional-unix.cbp  additional.cbp  additional.cpp  additional.vcproj  bookutils.h  common.cpp  contrib-unix.cbp  contrib.cbp  contrib.cpp  contrib.vcproj  layout-unix.cbp  layout.cbp  layout.cpp  layout.vcproj  plugins.sln  standard-unix.cbp  standard.cbp  standard.vcproj  wxAdditions.cbp  wxAdditions.cpp  wxAdditions.vcproj
src/rad/: about.cpp  appdata.cpp  appdata.h  appobserver.cpp  appobserver.h  bitmaps.cpp  bitmaps.h  customkeys.cpp  customkeys.h  genericpanel.h  global.cpp  global.h  mainframe.cpp  mainframe.h  menueditor.cpp  palette.cpp  palette.h  wxfbmanager.cpp
src/rad/cpppanel/: cpppanel.cpp  cpppanel.h
src/rad/designer/: menubar.cpp  menubar.h  visualeditor.cpp  visualeditor.h  visualobj.cpp  visualobj.h
src/rad/inspector/: objinspect2.cpp  objinspect2.h  wxfbadvprops.cpp
src/rad/objecttree/: objecttree.cpp  objecttree.h
src/rad/xrcpanel/: xrcpanel.cpp  xrcpanel.h
src/utils/: debug.cpp  debug.h  encodingutils.cpp  stringutils.cpp  stringutils.h  typeconv.cpp  typeconv.h  unistring.h  wxfbdefs.h  wxfbipc.cpp  xrcconv.cpp  xrcconv.h
wxFB20/: TODO.txt
wxfbTest/: wxfbTest-unix.cbp  wxfbTest.cbp  wxfbTest.fbp  wxfbTest_GUI.cpp  wxfbTest_GUI.h
